--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,14 @@
   --accent: #6a43b3;
 }
 
+#root {
+  height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -38,7 +46,7 @@ a:hover {
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
 }
 
 h1 {
